--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <head>Web Dev Assignments</head>
-        <p>Angela Hu help</p>
+        <p>Angela Hu</p>
         <p><a href="https://github.com/hu-ang">GitHub</a></p>
         <p><a href="hw01.xiaohulaoer.com">HW1</a></p>
     </body>
