--- a/animal.html
+++ b/animal.html
@@ -56,6 +56,7 @@
                 border: 2px solid green;
                 border-collapse: collapse;
                 text-align: left;
+                width: 25%;
             }
         </style>
     </head>
@@ -70,7 +71,7 @@
         </div>
         <div>
             <h2>A table of the powers of 2</h2>
-            <table style="width:25%">
+            <table>
                 <tr>
                     <th>x</th>
                     <th>2<sup>x</sup></th>
