--- a/animal.html
+++ b/animal.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Web Dev HW02~</title>
+        <meta charset="utf-8"/>
         <style>
             #letter1 {
                 color: aqua;
